chore: auth & list group by status
